Fix dialog field label wrapping

--- a/components/Box/LabeledDialogBox/styles.module.scss
+++ b/components/Box/LabeledDialogBox/styles.module.scss
@@ -4,12 +4,9 @@
 	gap: 1ch;
 	justify-content: center;
 
-	.label {
-		&-container {
-			justify-self: right;
-			align-self: center;
-		}
-
+	.label-container {
+		justify-self: right;
+		align-self: center;
 		white-space: nowrap;
 	}
 }
