--- a/components/Label/styles.module.scss
+++ b/components/Label/styles.module.scss
@@ -1,8 +1,6 @@
 .label-container {
-	.label {
-		// This prevents spaces from being omitted when wrapping text in labels, which allows space characters at the end of wrapped lines to sometimes line up with the colon.
-		white-space: pre-wrap;
-	}
+	// This prevents spaces from being omitted when wrapping text in labels, which allows space characters at the end of wrapped lines to sometimes line up with the colon.
+	white-space: pre-wrap;
 
 	&::after {
 		content: ':';
